--- a/Modelo_Machine_Learning_Prediccion_de_propiedades_argentinas.ipynb
+++ b/Modelo_Machine_Learning_Prediccion_de_propiedades_argentinas.ipynb
@@ -6,7 +6,7 @@
         "id": "8G-x0E8OceZp"
       },
       "source": [
-        "# Machine Learning - Precios Propiedades"
+        "# Machine Learning - Precios Propiedades (Versión 1)"
       ]
     },
     {
